--- a/www/templates/animaux2.html
+++ b/www/templates/animaux2.html
@@ -21,7 +21,7 @@
                <a data-ng-click="animaux2Ctrl.animauxPlay($event)"><i class="ion-volume-medium"></i></a>
             </div>
          </drop-spot>
-
       </div>
    </div>
 </div>
+   <div class="pagination">{{animaux2Ctrl.page}}/7</div>
