--- a/www/css/accueil.css
+++ b/www/css/accueil.css
@@ -100,3 +100,12 @@ h2.title{
     bottom: 0;
     right: 0;
 }
+
+.pagination {
+    position: absolute;
+    bottom: 0;
+    left : 0;
+    right: 0;
+    text-align: center;
+    font-size: 200%;
+}
