--- a/www/templates/animaux2.html
+++ b/www/templates/animaux2.html
@@ -7,20 +7,22 @@
 
    <div drag-and-drop class="drag-container" on-drag-enter="animaux2Ctrl.dragEnter(draggable, droppable)" on-drag-end="animaux2Ctrl.dragEnd(draggable, droppable)">
 
-      <div class="animal_container" ng-repeat="animal in animaux2Ctrl.animalData|limitTo:3">
-         <div drag-item drag-enabled="true" class="drag-item {{animal.nom}}" drag-id="{{'animal'+animal.id}}">
+      <div class="animal_container">
+         <div ng-repeat="animal in animaux2Ctrl.animalData|limitTo:3" drag-item drag-enabled="true" class="drag-item {{animal.nom}}" drag-id="{{'animal'+animal.id}}">
             <div id="{{'animal'+animal.id}}" class="animal-drag "><img ng-src="img/{{animal.nom}}.png" alt="{{animal.nom}}">
             </div>
          </div>
 
-         <drop-spot max-items="1" class="drop-spot" drop-id="{{'animal'+animal.id}}">
-            <div id="{{'son'+animal.id}}">
-               <audio id="{{'audio'+animal.id}}" ng-src="{{'sons/'+animal.cri | trustAsResourceUrl}}" autostart="false" class="{{animal.nom}}">
+      <div class="drop_container" ng-repeat="sound in animaux2Ctrl.soundData|limitTo:3">
+         <drop-spot max-items="1" class="drop-spot" drop-id="{{'animal'+sound.id}}" >
+            <div id="son{{sound.id}}">
+               <audio id="{{'audio'+sound.id}}" ng-src="{{'sons/'+sound.cri | trustAsResourceUrl}}" autostart="false" class="{{sound.nom}}">
 
                </audio>
-               <a data-ng-click="animaux2Ctrl.animauxPlay($event)"><i class="ion-volume-medium"></i></a>
+               <a data-ng-click="animaux2Ctrl.animauxPlay($event)"><i class="ion-volume-medium"></i><!--<i class="ion-checkmark-round"></i>--></a>
             </div>
          </drop-spot>
+      </div>
 
       </div>
    </div>
