--- a/www/templates/lettres.html
+++ b/www/templates/lettres.html
@@ -8,8 +8,11 @@
     <drop-spot max-items="1" class="drop-spot" drop-id="animal1">      
 	<div class="lettre">A</div>
 	</drop-spot>
+	<div class="exemple">
+	<i class="ion-arrow-up-c"></i>
 	<div drag-item drag-enabled="true"  class="ex_animal drag-item {{lettresCtrl.animal1}}" drag-id="animal1">
 	<div class="exemple_lettre"><img ng-src="img/aigle.png" /></div>
+	</div>
 	</div>
 	</center>
 </div>
