--- a/www/css/lettres.css
+++ b/www/css/lettres.css
@@ -31,11 +31,35 @@
 	
 }
 
-.lettres .drag-item.ex_animal{
+.lettres .exemple{
 
 	display: block;
 	margin:30% auto 0;
 }
+i.ion-arrow-up-c{
+	display: block;
+    margin-bottom: 10px;
+    font-size: 60px;
+    color: #7b6674;
+    animation: fleche-anim 1s linear infinite alternate; 
+    transform-origin:50% 200px;
+}
+
+
+
+
+
+
+
+
+
+@keyframes fleche-anim {
+    from { transform:translate(0px,0px); }
+    to { transform:translate(0px,-20px); }
+}
+
+
+
 
 .lettres .drop-content{
 	display: inline-block;
@@ -55,7 +79,8 @@
 
 .lettres .drop-spot {
     height: 150px;
-    display: inline-block;
+    display: block;
     width: 50%;
+        margin-bottom: 33%;
   /*  margin-top : 25%; */
 }
