--- a/www/templates/lettres2.html
+++ b/www/templates/lettres2.html
@@ -1,3 +1,4 @@
+      <div class="popup" ng-show="lettres2Ctrl.popup_active==true"><img src="../img/pouce_bleu.jpg" /></div>
 <ion-header-bar align-title="center" class="">
    <button class="button button-icon icon ion-arrow-left-c flat" ng-click="lettres2Ctrl.back()"></button>
    <h1 class="title title-center header-item">Lettres ({{lettres2Ctrl.page}}/7)</h1>
