--- a/www/css/accueil.css
+++ b/www/css/accueil.css
@@ -117,3 +117,12 @@ h2.title{
     text-align: center;
     font-size: 200%;
 }
+
+.popup {
+    z-index: 3;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top : 30%;
+  left : 20%;
+}
