--- a/www/css/lettres.css
+++ b/www/css/lettres.css
@@ -25,7 +25,7 @@
 .exemple_lettre img{  
 
  max-width: 100%;   
-  max-height: 160px;  
+  max-height: 105px;  
     margin: 0 auto; 
 
 	
@@ -78,9 +78,9 @@ i.ion-arrow-up-c{
 }
 
 .lettres .drop-spot {
-    height: 150px;
+    height: 210px;
     display: block;
     width: 50%;
-        margin-bottom: 33%;
+    /*    margin-bottom: 33%;*/
   /*  margin-top : 25%; */
 }
