--- a/www/templates/lettres2.html
+++ b/www/templates/lettres2.html
@@ -3,7 +3,7 @@
    <h1 class="title title-center header-item">Lettres ({{lettres2Ctrl.page}}/7)</h1>
 </ion-header-bar>
 <div class="content has-header lettres" ng-init="lettres2Ctrl.getAnimaux()">
-   <div drag-and-drop class="drag-container" on-drag-enter="lettres2Ctrl.dragEnter(draggable,droppable)" on-drag-end="lettres2Ctrl.dragEnd(draggable,droppable)">
+   <div drag-and-drop class="drag-container" on-drag-enter="lettres2Ctrl.dragEnter(draggable,droppable)" on-item-placed="lettres2Ctrl.dragEnd(draggable,droppable)">
 
       <center>
          <drop-spot max-items="1" class="drop-spot" drop-id="reponse">
@@ -12,23 +12,15 @@
                 {{lettres2Ctrl.rand_lettres}}
             </a>
          </drop-spot>
-         <div drag-item drag-enabled="true" class="drag-item  {{lettres2Ctrl.reponse.nom}}" drag-id="reponse">
-            <audio id="audio1" ng-src="{{lettres2Ctrl.reponse_cri}}" autostart="false" class=""></audio>
-            <a data-ng-click="lettres2Ctrl.animauxPlay($event)" class="animaux_lettre"><img ng-src="img/{{lettres2Ctrl.reponse.nom}}.png">
+         <div drag-item drag-enabled="true" class="drag-item {{lettres2Ctrl.dragIdArray[$index]}}" drag-id="{{lettres2Ctrl.dragIdArray[$index]}}" ng-repeat="lettres in lettres2Ctrl.pos_array track by $index" >
+            <audio id="audio{{$index}}" ng-src="{{'sons/'+lettres2Ctrl.pos_array[$index].cri | trustAsResourceUrl}}" autostart="false" class=""></audio>
+            <a data-ng-click="lettres2Ctrl.animauxPlay($event)" class="animaux_lettre"><img ng-src="img/{{lettres2Ctrl.pos_array[$index].nom}}.png">
 
             </a>
-         </div>
-         <div drag-item drag-enabled="true" class="drag-item {{lettres2Ctrl.solution1.nom}}" drag-id="animal1">
-            <audio id="audio2" ng-src="{{lettres2Ctrl.solution1_cri}}" autostart="false" class=""></audio>
-            <a data-ng-click="lettres2Ctrl.animauxPlay($event)" class="animaux_lettre"><img ng-src="img/{{lettres2Ctrl.solution1.nom}}.png">
-
-            </a>
-         </div>
-         <div drag-item drag-enabled="true" class="drag-item {{lettres2Ctrl.solution2.nom}}" drag-id="animal2">
-            <audio id="audio3" ng-src="{{lettres2Ctrl.solution2_cri}}" autostart="false" class=""></audio>
-            <a data-ng-click="lettres2Ctrl.animauxPlay($event)" class="animaux_lettre"><img ng-src="img/{{lettres2Ctrl.solution2.nom}}.png">
-            </a>
-         </div>
+            </div>
+      </div>
+        
+      
       </center>
 
 
