--- a/www/templates/chiffres_test.html
+++ b/www/templates/chiffres_test.html
@@ -1,4 +1,4 @@
-      <div class="popup" ng-show="chiffrestestCtrl.popup_active==true"><img src="../img/pouce_bleu.jpg" /></div>
+      <div class="popup" ng-show="chiffrestestCtrl.popup_active==true"><img src="../img/smiley.jpg" /></div>
 <ion-header-bar align-title="center" class="">
    <button class="button button-icon icon ion-arrow-left-c flat" ng-click="chiffrestestCtrl.back()"></button>
    <h1 class="title title-center header-item">Chiffres ({{chiffrestestCtrl.page}}/7)</h1>
