--- a/www/templates/animaux.html
+++ b/www/templates/animaux.html
@@ -1,4 +1,4 @@
-      <div class="popup" ng-show="animauxCtrl.popup_active==true"><img src="../img/smiley.jpg" /></div>
+      <div class="popup" ng-show="animauxCtrl.popup_active==true"><img src="../img/smiley.jpg" class="pop" /></div>
 <ion-header-bar align-title="center" class="">
    <button class="button button-icon icon ion-arrow-left-c flat" ng-click="animauxCtrl.back()"></button>
    <h1 class="title title-center header-item">Animaux ({{animauxCtrl.page}}/14)</h1>
