--- a/www/templates/animaux2.html
+++ b/www/templates/animaux2.html
@@ -1,4 +1,4 @@
-      <div class="popup" ng-show="animaux2Ctrl.popup_active==true"><img src="../img/smilies.gif" class="pop"/></div>
+      <div class="popup_bien" ng-show="animaux2Ctrl.popup_active==true"><img src="../img/smilies.gif" /></div>
 <ion-header-bar align-title="center" class="">
    <button class="button button-icon icon ion-arrow-left-c flat" ng-click="animaux2Ctrl.back()"></button>
    <h1 class="title title-center header-item">Animaux ({{animaux2Ctrl.page+7}}/14)</h1>
