refonte page animaux

--- a/www/templates/animaux.html
+++ b/www/templates/animaux.html
@@ -13,16 +13,17 @@
             <div id="animal{{animal.id}}" class="animal-drag "><img ng-src="img/{{animal.nom}}.png" alt="{{animal.nom}}">
             </div>
          </div>
-         <div class="drop_container" ng-repeat="sound in animauxCtrl.soundData|limitTo:2">
-            <drop-spot max-items="1" class="drop-spot" drop-id="{{'animal'+sound.id}}" >
-               <div id="son{{sound.id}}">
-                  <audio id="{{'audio'+sound.id}}" ng-src="{{'sons/'+sound.cri | trustAsResourceUrl}}" autostart="false" class="{{sound.nom}}">
+         <div class="drops"></div>
+            <div class="drop_container" ng-repeat="sound in animauxCtrl.soundData|limitTo:2">
+               <drop-spot max-items="1" class="drop-spot" drop-id="{{'animal'+sound.id}}" >
+                  <div id="son{{sound.id}}">
+                     <audio id="{{'audio'+sound.id}}" ng-src="{{'sons/'+sound.cri | trustAsResourceUrl}}" autostart="false" class="{{sound.nom}}">
 
-                  </audio>
-                  <a data-ng-click="animauxCtrl.animauxPlay($event)"><i class="ion-volume-medium"></i><!--<i class="ion-checkmark-round"></i>--></a>
-               </div>
-            </drop-spot>
-         </div>
+                     </audio>
+                     <a data-ng-click="animauxCtrl.animauxPlay($event)"><i class="ion-volume-medium"></i><!--<i class="ion-checkmark-round"></i>--></a>
+                  </div>
+               </drop-spot>
+            </div>
       </div>
 
    </div>
