--- a/www/templates/animaux2.html
+++ b/www/templates/animaux2.html
@@ -12,18 +12,19 @@
             <div id="{{'animal'+animal.id}}" class="animal-drag "><img ng-src="img/{{animal.nom}}.png" alt="{{animal.nom}}">
             </div>
          </div>
+         <div class="drops">
 
-      <div class="drop_container" ng-repeat="sound in animaux2Ctrl.soundData|limitTo:3">
-         <drop-spot max-items="1" class="drop-spot" drop-id="{{'animal'+sound.id}}" >
-            <div id="son{{sound.id}}">
-               <audio id="{{'audio'+sound.id}}" ng-src="{{'sons/'+sound.cri | trustAsResourceUrl}}" autostart="false" class="{{sound.nom}}">
+            <div class="drop_container" ng-repeat="sound in animaux2Ctrl.soundData|limitTo:3">
+               <drop-spot max-items="1" class="drop-spot" drop-id="{{'animal'+sound.id}}" >
+                  <div id="son{{sound.id}}">
+                     <audio id="{{'audio'+sound.id}}" ng-src="{{'sons/'+sound.cri | trustAsResourceUrl}}" autostart="false" class="{{sound.nom}}">
 
-               </audio>
-               <a data-ng-click="animaux2Ctrl.animauxPlay($event)"><i class="ion-volume-medium"></i><!--<i class="ion-checkmark-round"></i>--></a>
+                     </audio>
+                     <a data-ng-click="animaux2Ctrl.animauxPlay($event)"><i class="ion-volume-medium"></i><!--<i class="ion-checkmark-round"></i>--></a>
+                  </div>
+               </drop-spot>
             </div>
-         </drop-spot>
       </div>
-
       </div>
    </div>
 </div>
